Colaboratory を使用して作成しました

--- a/cpp_apg4b.ipynb
+++ b/cpp_apg4b.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_apg4b.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNqu9QyJ02uTW+ZU2de0Tg/",
+      "authorship_tag": "ABX9TyNfEByfKXIBiZYcobjXacqI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -146,7 +146,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -169,7 +169,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -206,7 +206,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -229,7 +229,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -264,7 +264,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -287,7 +287,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -321,7 +321,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -344,7 +344,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -376,7 +376,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -399,7 +399,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -437,7 +437,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -460,7 +460,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -495,7 +495,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -518,7 +518,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -555,7 +555,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -578,7 +578,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -613,7 +613,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -636,7 +636,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -705,7 +705,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -728,7 +728,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -770,7 +770,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -793,7 +793,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -831,7 +831,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -854,7 +854,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -864,6 +864,361 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 問題\n",
+        "# EX5 - A足すB問題 \n",
+        "# 2つの整数A, Bが与えられます。A+Bの計算結果を出力してください。\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        " \n",
+        "int main() {\n",
+        "  int A, B;\n",
+        "  cin >> A >> B;\n",
+        "  cout << A+B << endl;\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "pHVa1nn4-6OS",
+        "outputId": "5cbed93e-b84f-4dd4-b377-940d330c9416",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Writing temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp -o temp; echo 1 2 | ./temp"
+      ],
+      "metadata": {
+        "id": "FvNljIIN_Q5M"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 問題\n",
+        "# A - New Year \n",
+        "# 12 月 30 日の M 時から次の年になるまでは何時間か、求めてください。\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        " \n",
+        "int main() {\n",
+        "  int M;\n",
+        "  cin >> M;\n",
+        "  cout << 48 - M << endl;\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "Knte-0NU_h1Z",
+        "outputId": "9aff3576-1016-40f2-d799-29476d27797c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp -o temp; echo 21 | ./temp"
+      ],
+      "metadata": {
+        "id": "Npg1lKKg_3EQ",
+        "outputId": "cdcb43f3-113e-4c20-ca22-a54201ffe845",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "27\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 問題\n",
+        "# A - Rating Goal \n",
+        "# 現在のレーティングを a とする。\n",
+        "# 次のコンテストで, パフォーマンス b を取ったとする。\n",
+        "# そのとき, レーティングは a と b の平均まで変化する。\n",
+        "# 高橋君は, 現在のレーティングが R で, 次のコンテストでレーティングをちょうど G にした\n",
+        "# そのとき, 高橋君が取るべきパフォーマンスを求めなさい。\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        " \n",
+        "int main() {\n",
+        "  int R, G;\n",
+        "  cin >> R >> G;\n",
+        "  // (R + performance ) / 2 = G より performance = G * 2 - R\n",
+        "  cout << G * 2 - R << endl;\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "xUkTz452ASP5",
+        "outputId": "98a81f41-5410-42be-8a46-280583800dd8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp -o temp; echo 2002 2017 | ./temp"
+      ],
+      "metadata": {
+        "id": "s-_VjduUBLyU",
+        "outputId": "bd950668-b01b-44d0-9c4e-6748901b12fd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2032\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 問題\n",
+        "# A - Bichrome Cells \n",
+        "# N×N のマス目があります。\n",
+        "# このマス目の各マスを白色または黒色に塗ることにしました\n",
+        "# ちょうど A マスを白色に塗るとき、黒色に塗ることになるマスはいくつあるでしょうか。\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        " \n",
+        "int main() {\n",
+        "  int N, A;\n",
+        "  cin >> N >> A;\n",
+        "  cout << N * N - A << endl;\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "Xbsh8SHTCXaX",
+        "outputId": "4392ee30-fb9a-4657-cf40-3bfb22c58a41",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp -o temp; echo 3 4 | ./temp"
+      ],
+      "metadata": {
+        "id": "VoyMrKOrFhxO",
+        "outputId": "a3f7f9e9-64ae-49e1-9b8d-e12731bd075a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 問題\n",
+        "# A - Round Up the Mean\n",
+        "# 2 つの正整数 a, b が与えられます。 a, b の平均値を x とします。 \n",
+        "# x の小数点以下を切り上げて得られる整数を出力してください。\n",
+        "# 入力 7 4 => 6\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        " \n",
+        "int main() {\n",
+        "  int a, b;\n",
+        "  cin >> a >> b;\n",
+        "  cout << (a+b+1)/2 << endl;\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "gzghcijvFybT",
+        "outputId": "17697fae-38c1-4eb6-c1d8-9d2a3727fa8c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp -o temp; echo 7 4 | ./temp"
+      ],
+      "metadata": {
+        "id": "xtAxQf_-GINc",
+        "outputId": "4176d55c-9366-4f06-fb34-429e7ff8f6d4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "6\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 問題\n",
+        "# A - Placing Marbles \n",
+        "# すぬけ君は 1,2,3 の番号がついた 3 つのマスからなるマス目を持っています。 \n",
+        "# 各マスには 0 か 1 が書かれています。\n",
+        "# すぬけ君は 1 が書かれたマスにビー玉を置きます。 ビー玉が置かれるマスがいくつあるか求めてください。\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        " \n",
+        "int main() {\n",
+        "  int x, s1, s2, s3;\n",
+        "  cin >> x ;\n",
+        "  s1 = x % 2;\n",
+        "  s2 = x / 10 % 2;\n",
+        "  s3 = x / 100 % 2;\n",
+        "  cout << s1+s2+s3 << endl;\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "XN4-zwHkOKsZ",
+        "outputId": "2399fb99-b1c6-43d0-cbf4-3ffcd871bcba",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp -o temp; echo 101 | ./temp"
+      ],
+      "metadata": {
+        "id": "EuvyQfjqOcJC",
+        "outputId": "9aac51cf-aa36-47e2-92bc-c203ef083917",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# G - 1.06.if文・比較演算子・論理演算子 "
+      ],
+      "metadata": {
+        "id": "XfLqiU3LPQLH"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
