Colaboratory を使用して作成しました

--- a/cpp_apg4b.ipynb
+++ b/cpp_apg4b.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_apg4b.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNfEByfKXIBiZYcobjXacqI",
+      "authorship_tag": "ABX9TyPo1AIPcm4tt+tmXOwKve/T",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -888,7 +888,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -933,7 +933,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -956,7 +956,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -995,7 +995,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1018,7 +1018,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1054,7 +1054,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1077,7 +1077,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1113,7 +1113,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1136,7 +1136,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1175,7 +1175,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1198,7 +1198,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3187,6 +3187,83 @@
           "name": "stdout",
           "text": [
             "heLLo\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 実験\n",
+        "# how to c++ sum all elements in multidimensional vector\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "\n",
+        "int main() {\n",
+        "  int sum;\n",
+        "\n",
+        "  vector<vector<int>> data = {\n",
+        "    {7, 4, 0, 8},\n",
+        "    {2, 0, 3, 5},\n",
+        "    {6, 1, 7, 0},\n",
+        "  };\n",
+        "  sum = 0;\n",
+        "  for (int i = 0; i < data.size(); i++) {\n",
+        "    for (int j = 0; j < data.at(i).size();j++) {\n",
+        "      sum += data.at(i).at(j);\n",
+        "    }\n",
+        "  };\n",
+        "  cout << sum << endl;\n",
+        "  sum = 0;\n",
+        "\n",
+        "  // 範囲for文が使えないか\n",
+        "  for (vector<int> vec : data) {\n",
+        "    for (int item : vec) {\n",
+        "      sum += item;\n",
+        "    }\n",
+        "  }\n",
+        "  cout << sum << endl;\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "EQl--G-4ZLf-",
+        "outputId": "52b60a6d-7dec-4477-f458-6c5e4e5ecaa3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp -o temp; ./temp"
+      ],
+      "metadata": {
+        "id": "moj3bcJiaFso",
+        "outputId": "a833c830-13d2-4b73-99f9-351ef97a7eae",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "43\n",
+            "43\n"
           ]
         }
       ]
