--- a/cpp_apg4b.ipynb
+++ b/cpp_apg4b.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_apg4b.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPzlUOwZwa4Zx8zPm+sRBPw",
+      "authorship_tag": "ABX9TyMOd3Tqz5fYKl//SW3WXrnU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1723,7 +1723,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1748,7 +1748,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1787,10 +1787,43 @@
         "  cout << x << endl;\n",
         "\n",
         "  // ここにプログラムを追記\n",
+        "  // 2\n",
+        "  x *= (a+b);\n",
+        "  cout << x << endl;\n",
+        "  // 3\n",
+        "  x *=x ; \n",
+        "  cout << x << endl;\n",
+        "  // 4\n",
+        "  x--;\n",
+        "  cout << x << endl;\n",
         "}\n"
       ],
       "metadata": {
-        "id": "0SuRIMo4iZyh"
+        "id": "0SuRIMo4iZyh",
+        "outputId": "da767863-3298-41fb-d08b-749178e0c6ac",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp -o temp; echo 1 2 3 |./temp\n",
+        "!g++ temp.cpp -o temp; echo 3 2 5 |./temp"
+      ],
+      "metadata": {
+        "id": "WelnJMbbiZop"
       },
       "execution_count": null,
       "outputs": []
@@ -1798,12 +1831,91 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
-        "1 2 3\n",
-        "3 2 5"
+        "# 問題\n",
+        "# EX10 - 棒グラフの出力 \n",
+        "# AさんとBさんのテストの点数A,Bが与えられます。\n",
+        "# 2人の点数を表す横向きの棒グラフを出力してください。\n",
+        "# 棒グラフは1点を一つの]で表します。\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        " \n",
+        "int main() {\n",
+        "  int A, B;\n",
+        "  cin >> A >> B;\n",
+        " \n",
+        "  // ここにプログラムを追記\n",
+        "  cout << \"A:\" ;\n",
+        "  for (int i = 0; i < A; i++) cout << \"]\";\n",
+        "  cout << endl;\n",
+        "  cout << \"B:\" ;\n",
+        "  for (int i = 0; i < B; i++) cout << \"]\";\n",
+        "  cout << endl;\n",
+        "}"
       ],
       "metadata": {
-        "id": "WelnJMbbiZop"
+        "id": "NaxUwbp_3Hup",
+        "outputId": "7c9b9101-cfc8-4fc6-bedd-494a84126939",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp -o temp; echo 5 9 |./temp\n",
+        "!g++ temp.cpp -o temp; echo 0 20 |./temp"
+      ],
+      "metadata": {
+        "id": "LZtc9s_n3HmI",
+        "outputId": "cac74ba9-5d87-4971-9179-7a5539e6479f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "A:]]]]]\n",
+            "B:]]]]]]]]]\n",
+            "A:\n",
+            "B:]]]]]]]]]]]]]]]]]]]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "4ViGJc7z53Q2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "PMcBu-QO53Ic"
       },
       "execution_count": null,
       "outputs": []
