--- a/cpp_apg4b.ipynb
+++ b/cpp_apg4b.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "cpp_apg4b.ipynb",
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyMYCY+i1Q7wbktJVRWbN1LT",
+      "authorship_tag": "ABX9TyOCepA1iJGa0WaCXrvfMw5Y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1919,38 +1918,81 @@
         "int main() {\n",
         "  int N, A;\n",
         "  cin >> N >> A;\n",
+        "  string op;\n",
+        "  int  B;\n",
         "\n",
         "  // ここにプログラムを追記\n",
-        "  for (int i = 0; i < N; i++){\n",
-        "      int A, B;\n",
-        "      string op;\n",
-        "      cin >> A >> op >> B;\n",
-        "      \n",
+        "  for (int i = 0; i < N; i++) {\n",
+        "    cin >> op >> B;\n",
+        "    if (op == \"+\") {cout << i + 1 << \":\" << (A += B) << endl; continue;}\n",
+        "    else if (op == \"-\") {cout << i + 1 << \":\" << (A -= B) << endl; continue;}\n",
+        "    else if (op == \"*\") {cout << i + 1 << \":\" << (A *= B) << endl; continue;}\n",
+        "    else if (op == \"/\" && B != 0) {cout << i + 1 << \":\" << (A /= B) << endl; continue;}\n",
+        "    else {cout << \"error\" << endl; break;}\n",
         "  }\n",
-        "}\n"
+        "}"
       ],
       "metadata": {
-        "id": "4ViGJc7z53Q2"
+        "id": "4ViGJc7z53Q2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "34893391-7dbd-45d7-e7c8-9fe2bc041877"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "!g++ temp.cpp -o temp; echo 3 2 + 1 * 3 / 2 |./temp\n",
-        "!g++ temp.cpp -o temp; echo 4 3 + 1 / 0 * 2 - 10 |./temp"
+        "!g++ temp.cpp -o temp; echo \"3 2 + 1 * 3 / 2\" |./temp\n",
+        "!g++ temp.cpp -o temp; echo \"2 3 / 2 / 2\" |./temp\n",
+        "!g++ temp.cpp -o temp; echo \"4 3 + 1 / 0 * 2 - 10\" |./temp\n",
+        "!g++ temp.cpp -o temp; echo \"7 10 * 10 * 10 * 10 * 10 * 10 * 10 * 10\" |./temp"
       ],
       "metadata": {
-        "id": "PMcBu-QO53Ic"
+        "id": "PMcBu-QO53Ic",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4d0830fb-6b28-4484-de6b-38cc1804ce93"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1:3\n",
+            "2:9\n",
+            "3:4\n",
+            "1:1\n",
+            "2:0\n",
+            "1:4\n",
+            "error\n",
+            "1:100\n",
+            "2:1000\n",
+            "3:10000\n",
+            "4:100000\n",
+            "5:1000000\n",
+            "6:10000000\n",
+            "7:100000000\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        ""
+        "ひなあられ\n"
       ],
       "metadata": {
         "id": "MmB96hl9QBLh"
