Colaboratory を使用して作成しました

--- a/cpp_apg4b.ipynb
+++ b/cpp_apg4b.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "cpp_apg4b.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN9JYVnTux/GLyKDHMYD2GI",
+      "authorship_tag": "ABX9TyOd7m1QGm7+raNpELK7hOx3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2046,11 +2046,11 @@
         "!g++ temp.cpp -o temp; echo 8 P Y W G Y W Y Y |./temp"
       ],
       "metadata": {
-        "id": "Eq6ty-_sjwbR",
-        "outputId": "955e04e2-0601-4a49-cd81-e2e150d99f5e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Eq6ty-_sjwbR",
+        "outputId": "955e04e2-0601-4a49-cd81-e2e150d99f5e"
       },
       "execution_count": 47,
       "outputs": [
@@ -2091,11 +2091,11 @@
         "}"
       ],
       "metadata": {
-        "id": "cK0sM6FDosbu",
-        "outputId": "e61feabe-1a93-469a-f9b7-4f239f974f3f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "cK0sM6FDosbu",
+        "outputId": "e61feabe-1a93-469a-f9b7-4f239f974f3f"
       },
       "execution_count": 50,
       "outputs": [
@@ -2115,11 +2115,11 @@
         "!g++ temp.cpp -o temp; echo 2 6 8 3 3 |./temp"
       ],
       "metadata": {
-        "id": "HiI1KvyaosRP",
-        "outputId": "3635e027-de7c-4ef7-be51-20e0ab4733b7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "HiI1KvyaosRP",
+        "outputId": "3635e027-de7c-4ef7-be51-20e0ab4733b7"
       },
       "execution_count": 51,
       "outputs": [
@@ -2136,10 +2136,80 @@
     {
       "cell_type": "code",
       "source": [
-        "B - Harshad Number "
+        "# 問題\n",
+        "# B - Harshad Number\n",
+        "# 整数 X を十進法で表したときの各桁の数字の和を f(X) としたとき、X が f(X) で割り切れる場合、X はハーシャッド数です。\n",
+        "# 整数 N が与えられるので、ハーシャッド数かどうか判定してください。\n",
+        "# N がハージャッド数ならば Yes を、そうでなければ No を出力せよ。\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "\n",
+        "int main() {\n",
+        "  int N, N2, digit;\n",
+        "  cin >> N;\n",
+        "  N2 = N;\n",
+        "  digit = 0;\n",
+        "  for (int i = 0; i < 8 ; i++){\n",
+        "      digit += N % 10;\n",
+        "      N /= 10;\n",
+        "  }\n",
+        "  if (N2 % digit == 0) cout << \"Yes\" << endl;\n",
+        "  else cout << \"No\" << endl;\n",
+        "}"
       ],
       "metadata": {
-        "id": "Zo5e3tkzprSu"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Zo5e3tkzprSu",
+        "outputId": "15ee642d-11a5-4327-ec35-5409fe85908f"
+      },
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp -o temp; echo 12 |./temp\n",
+        "!g++ temp.cpp -o temp; echo 57 |./temp\n",
+        "!g++ temp.cpp -o temp; echo 148 |./temp"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HfkQkcQSpr5d",
+        "outputId": "044c41c0-1908-4180-af49-2957c0ec2e0d"
+      },
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Yes\n",
+            "No\n",
+            "No\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "B - Addition and Multiplication "
+      ],
+      "metadata": {
+        "id": "D4Fl9FpF0HpW"
       },
       "execution_count": null,
       "outputs": []
@@ -2150,7 +2220,7 @@
         ""
       ],
       "metadata": {
-        "id": "HfkQkcQSpr5d"
+        "id": "338Idcwd0IDK"
       },
       "execution_count": null,
       "outputs": []
