Colaboratory を使用して作成しました

--- a/cpp_apg4b.ipynb
+++ b/cpp_apg4b.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "cpp_apg4b.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPMXoQf9Fa56QqRGDfFpkAr",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyO41JO3H1L7v8V7Car0Zlhc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1939,7 +1940,7 @@
         },
         "outputId": "34893391-7dbd-45d7-e7c8-9fe2bc041877"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1965,7 +1966,7 @@
         },
         "outputId": "4d0830fb-6b28-4484-de6b-38cc1804ce93"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2027,7 +2028,7 @@
         "id": "MmB96hl9QBLh",
         "outputId": "5e66ecde-b545-4447-91ac-4eb9a6d47fb4"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2052,7 +2053,7 @@
         "id": "Eq6ty-_sjwbR",
         "outputId": "955e04e2-0601-4a49-cd81-e2e150d99f5e"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2097,7 +2098,7 @@
         "id": "cK0sM6FDosbu",
         "outputId": "e61feabe-1a93-469a-f9b7-4f239f974f3f"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2121,7 +2122,7 @@
         "id": "HiI1KvyaosRP",
         "outputId": "3635e027-de7c-4ef7-be51-20e0ab4733b7"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2165,7 +2166,7 @@
         "id": "Zo5e3tkzprSu",
         "outputId": "15ee642d-11a5-4327-ec35-5409fe85908f"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2190,7 +2191,7 @@
         "id": "HfkQkcQSpr5d",
         "outputId": "044c41c0-1908-4180-af49-2957c0ec2e0d"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2235,7 +2236,7 @@
         "id": "D4Fl9FpF0HpW",
         "outputId": "7d068395-0e55-456a-9713-9895f9147115"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2259,7 +2260,7 @@
         "id": "338Idcwd0IDK",
         "outputId": "c0827b08-03c2-49dc-a412-70cf9d9606c4"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2300,11 +2301,9 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
-        "\n",
-        "1 10 2\n",
-        "2 9 3 6\n",
-        "5 20 11 12 9 17 12"
+        "!g++ temp.cpp -o temp; echo 1 10 2 |./temp\n",
+        "!g++ temp.cpp -o temp; echo 2 9 3 6 |./temp\n",
+        "!g++ temp.cpp -o temp; echo 5 20 11 12 9 17 12 |./temp"
       ],
       "metadata": {
         "id": "5z9aCYSVeEaU"
