Colaboratory を使用して作成しました

--- a/cpp_apg4b.ipynb
+++ b/cpp_apg4b.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_apg4b.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOFGMNsKHU/X8tDg+l5a8t3",
+      "authorship_tag": "ABX9TyNubVoXv/wHv+M4N9XZiG6O",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2314,7 +2314,7 @@
         },
         "outputId": "d73178d9-389a-4602-9926-49cc8dc0fe2c"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2339,7 +2339,7 @@
         },
         "outputId": "f069c519-fd0d-4295-c4a8-15a42ee5d233"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2399,7 +2399,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2423,7 +2423,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2478,7 +2478,7 @@
         "id": "1FRU3VlaAtKI",
         "outputId": "339ab94b-1889-4dec-df28-ad0740854858"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2504,7 +2504,7 @@
         "id": "FAxhL1wMAtBt",
         "outputId": "d612d3b5-7a31-4c6d-dae9-9133c40ecd0f"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2519,55 +2519,26 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "WcoVH7kZMPid"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "---\n",
-        "問題\n",
-        "\n",
-        "EX12 - 足したり引いたり  \n",
-        "\n",
-        "1と+と-のみからなる式Sが1行で与えられるので、計算結果を出力してください。\n",
-        "\n",
-        "例えば式Sが1+1+1-1であったとき、計算結果は2です。\n",
-        "\n",
-        "具体的な式Sの形式は以下の通りです。\n",
-        "\n",
-        "* 式Sの1文字目は必ず1です。\n",
-        "* その後、「+または−」と1が交互に続きます。\n",
-        "* Sの最後の文字も必ず1です。\n",
-        "\n",
-        "入力例  \n",
-        "1+1+1-1  \n",
-        "=> 2\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "F4cGyjO2cE2W"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
+        "# 問題\n",
+        "# EX12 - 足したり引いたり  \n",
+        "# 1と+と-のみからなる式Sが1行で与えられるので、計算結果を出力してください。\n",
+        "# 例えば式Sが1+1+1-1であったとき、計算結果は2です。\n",
+        "# * 式Sの1文字目は必ず1です。\n",
+        "# * その後、「+または−」と1が交互に続きます。\n",
+        "# * Sの最後の文字も必ず1です。\n",
+        "\n",
         "%%writefile temp.cpp\n",
         "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
-        "#define rep(i, n) for (int i = 0; i < (int)(n); i++)\n",
         "\n",
         "int main() {\n",
         "  string  S ;\n",
         "  int result ;\n",
         "  cin >> S ;\n",
         "  result = 1;\n",
-        "  rep(i, S.size()) {\n",
+        "  for(int i=0;i < S.size(); i++) {\n",
         "    if (S.at(i) == '+')  result += 1; \n",
         "    else if (S.at(i) == '-') result -= 1;\n",
         "  }\n",
@@ -2576,12 +2547,12 @@
       ],
       "metadata": {
         "id": "GC-B1E-KiPlK",
-        "outputId": "b433e2ab-ec70-4618-9fd9-5930e93bcc78",
+        "outputId": "b39c96c0-03c2-4a5b-c52c-28c4e8dcabc4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -2599,12 +2570,12 @@
       ],
       "metadata": {
         "id": "LvjAI6tKpD1e",
-        "outputId": "396bdafd-78aa-4426-ff41-5fe63a3acb46",
+        "outputId": "8c468e64-6278-4921-d9d2-51ac9f1c5deb",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -2632,18 +2603,18 @@
     {
       "cell_type": "code",
       "source": [
+        "# 数字を逆順にして出力する\n",
+        "# 1 2 3 4 5 => 5 4 3 2 1\n",
         "%%writefile temp.cpp\n",
         "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
-        "#define rep(i, n) for (int i = 0; i < (int)(n); i++)\n",
-        "\n",
         "int main() {\n",
         "    int N = 5;\n",
         "    vector<int> vec(N);\n",
         "    for (int i = 0; i < N; i++) {\n",
         "        cin >> vec.at(i);\n",
         "    };\n",
-        "    rep (i, vec.size()) {\n",
+        "    for(int i = 0; i < vec.size(); i++) {\n",
         "        cout << vec.at(vec.size() - i - 1) << ' ' ;\n",
         "    }\n",
         "    cout << endl;\n",
@@ -2651,18 +2622,18 @@
       ],
       "metadata": {
         "id": "YHy_H_YqxP5Y",
-        "outputId": "a0a7c5b6-853b-42af-ea57-0f0eb74937f2",
+        "outputId": "91bd6714-ee56-4b92-dabc-bc0108a3aee7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Writing temp.cpp\n"
+            "Overwriting temp.cpp\n"
           ]
         }
       ]
@@ -2674,12 +2645,12 @@
       ],
       "metadata": {
         "id": "_vXhOYHf14ct",
-        "outputId": "d1b59517-5fc6-46a7-b7e6-295bae10f81e",
+        "outputId": "7b93a9ce-d367-4316-c90e-dcc3ef2717c6",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -2693,6 +2664,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# 文字列と配列は似ている\n",
         "%%writefile temp.cpp\n",
         "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
@@ -2713,12 +2685,12 @@
       ],
       "metadata": {
         "id": "xfM_zDO-DwvY",
-        "outputId": "31dd9b53-9555-4176-90c4-ce60c147d0cd",
+        "outputId": "8f279a36-032f-4284-f77f-10718ae55ada",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -2736,12 +2708,12 @@
       ],
       "metadata": {
         "id": "DMfTnVbVD4-9",
-        "outputId": "e7c050ea-79a0-465c-c445-2bc1678b5186",
+        "outputId": "fe5e4a56-9bbf-418c-ccf2-13bbd5a24705",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -2754,6 +2726,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "WcoVH7kZMPid"
+      }
     },
     {
       "cell_type": "code",
@@ -2770,7 +2751,7 @@
         "    vector<char> vec;\n",
         "    vec = { 'a','b','c','d' };\n",
         "    cout << str << endl;\n",
-        "    //  cout << vec << endl; #=> エラーになる\n",
+        "    //  cout << vec << endl; #=> エラーになる。配列は cout できない\n",
         "    rep(i, vec.size()) {\n",
         "        cout << vec.at(i);\n",
         "    }\n",
@@ -2783,12 +2764,12 @@
       ],
       "metadata": {
         "id": "5YoHVgsXZfGc",
-        "outputId": "822a1408-d499-42b8-9251-1c2d35d69df8",
+        "outputId": "51317066-a924-4b77-de35-6a3206aa4cb0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -2805,10 +2786,25 @@
         "!g++ temp.cpp -o temp;  ./temp"
       ],
       "metadata": {
-        "id": "VMq6WWaEZ9Ja"
+        "id": "VMq6WWaEZ9Ja",
+        "outputId": "cbbcea43-adac-4aec-a343-3782f771bde5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "abcd\n",
+            "abcd\n",
+            "abcd\n",
+            "abcd\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
